@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024 Ghatana Inc. // GH-90000
+ * Copyright (c) 2024 Ghatana Inc. 
  * All rights reserved.
  */
 package com.ghatana.orchestrator.executor.impl;
@@ -34,8 +34,8 @@ import org.junit.jupiter.api.Test;
  *
  * <p>Uses an {@link InMemoryEventCloud} for verifiable event storage.
  * Promise-returning methods are executed within the managed ActiveJ Eventloop
- * provided by {@link EventloopTestBase#runPromise(java.util.concurrent.Callable)} // GH-90000
- * since {@code Promise.ofBlocking()} requires a reactor in the current thread. // GH-90000
+ * provided by {@link EventloopTestBase#runPromise(java.util.concurrent.Callable)} 
+ * since {@code Promise.ofBlocking()} requires a reactor in the current thread. 
  *
  * @doc.type class
  * @doc.purpose Comprehensive unit tests for DefaultEventLogClient
@@ -51,13 +51,13 @@ class DefaultEventLogClientTest extends EventloopTestBase {
     private DefaultEventLogClient client;
 
     @BeforeEach
-    void setUp() { // GH-90000
-        eventCloud = new InMemoryEventCloud(); // GH-90000
-        objectMapper = new ObjectMapper() // GH-90000
-                .registerModule(new JavaTimeModule()) // GH-90000
-                .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS); // GH-90000
-        executor = Executors.newSingleThreadExecutor(); // GH-90000
-        client = new DefaultEventLogClient(eventCloud, objectMapper, executor); // GH-90000
+    void setUp() { 
+        eventCloud = new InMemoryEventCloud(); 
+        objectMapper = new ObjectMapper() 
+                .registerModule(new JavaTimeModule()) 
+                .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS); 
+        executor = Executors.newSingleThreadExecutor(); 
+        client = new DefaultEventLogClient(eventCloud, objectMapper, executor); 
     }
 
     // ==================== Construction ====================
@@ -68,42 +68,42 @@ class DefaultEventLogClientTest extends EventloopTestBase {
 
         @Test
         @DisplayName("single-arg constructor creates client with defaults")
-        void singleArgConstructor() { // GH-90000
-            DefaultEventLogClient c = new DefaultEventLogClient(eventCloud); // GH-90000
-            assertThat(c).isNotNull(); // GH-90000
-            assertThat(c.getPublishedCount()).isZero(); // GH-90000
-            assertThat(c.getFailedCount()).isZero(); // GH-90000
+        void singleArgConstructor() { 
+            DefaultEventLogClient c = new DefaultEventLogClient(eventCloud); 
+            assertThat(c).isNotNull(); 
+            assertThat(c.getPublishedCount()).isZero(); 
+            assertThat(c.getFailedCount()).isZero(); 
         }
 
         @Test
         @DisplayName("two-arg constructor creates client with custom ObjectMapper")
-        void twoArgConstructor() { // GH-90000
-            ObjectMapper om = new ObjectMapper(); // GH-90000
-            DefaultEventLogClient c = new DefaultEventLogClient(eventCloud, om); // GH-90000
-            assertThat(c).isNotNull(); // GH-90000
+        void twoArgConstructor() { 
+            ObjectMapper om = new ObjectMapper(); 
+            DefaultEventLogClient c = new DefaultEventLogClient(eventCloud, om); 
+            assertThat(c).isNotNull(); 
         }
 
         @Test
         @DisplayName("constructor rejects null eventCloud")
-        void rejectsNullEventCloud() { // GH-90000
-            assertThatThrownBy(() -> new DefaultEventLogClient(null)) // GH-90000
-                    .isInstanceOf(NullPointerException.class) // GH-90000
+        void rejectsNullEventCloud() { 
+            assertThatThrownBy(() -> new DefaultEventLogClient(null)) 
+                    .isInstanceOf(NullPointerException.class) 
                     .hasMessageContaining("eventCloud");
         }
 
         @Test
         @DisplayName("constructor rejects null objectMapper")
-        void rejectsNullObjectMapper() { // GH-90000
-            assertThatThrownBy(() -> new DefaultEventLogClient(eventCloud, null)) // GH-90000
-                    .isInstanceOf(NullPointerException.class) // GH-90000
+        void rejectsNullObjectMapper() { 
+            assertThatThrownBy(() -> new DefaultEventLogClient(eventCloud, null)) 
+                    .isInstanceOf(NullPointerException.class) 
                     .hasMessageContaining("objectMapper");
         }
 
         @Test
         @DisplayName("constructor rejects null executor")
-        void rejectsNullExecutor() { // GH-90000
-            assertThatThrownBy(() -> new DefaultEventLogClient(eventCloud, objectMapper, null)) // GH-90000
-                    .isInstanceOf(NullPointerException.class) // GH-90000
+        void rejectsNullExecutor() { 
+            assertThatThrownBy(() -> new DefaultEventLogClient(eventCloud, objectMapper, null)) 
+                    .isInstanceOf(NullPointerException.class) 
                     .hasMessageContaining("executor");
         }
     }
@@ -116,100 +116,100 @@ class DefaultEventLogClientTest extends EventloopTestBase {
 
         @Test
         @DisplayName("publishes Map event to EventCloud")
-        void publishesMapEvent() throws Exception { // GH-90000
-            Map<String, Object> event = Map.of( // GH-90000
+        void publishesMapEvent() throws Exception { 
+            Map<String, Object> event = Map.of( 
                     "stepId", "step-1",
                     "agentId", "agent-1",
                     "status", "SUCCESS",
                     "durationMs", 42L);
 
-            publishAndAwait(client, "tenant-1", event); // GH-90000
+            publishAndAwait(client, "tenant-1", event); 
 
             List<InMemoryEventCloud.StoredEvent> stored = eventCloud.getEvents("tenant-1");
-            assertThat(stored).hasSize(1); // GH-90000
-            assertThat(stored.get(0).eventType()).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+            assertThat(stored).hasSize(1); 
+            assertThat(stored.get(0).eventType()).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
 
-            String json = new String(stored.get(0).payload(), StandardCharsets.UTF_8); // GH-90000
+            String json = new String(stored.get(0).payload(), StandardCharsets.UTF_8); 
             @SuppressWarnings("unchecked")
-            Map<String, Object> parsed = objectMapper.readValue(json, Map.class); // GH-90000
-            assertThat(parsed).containsEntry("stepId", "step-1"); // GH-90000
-            assertThat(parsed).containsEntry("agentId", "agent-1"); // GH-90000
-            assertThat(parsed).containsEntry("status", "SUCCESS"); // GH-90000
+            Map<String, Object> parsed = objectMapper.readValue(json, Map.class); 
+            assertThat(parsed).containsEntry("stepId", "step-1"); 
+            assertThat(parsed).containsEntry("agentId", "agent-1"); 
+            assertThat(parsed).containsEntry("status", "SUCCESS"); 
             assertThat(parsed).containsKey("_publishedAt");
-            assertThat(parsed).containsEntry("_schemaVersion", "1.0"); // GH-90000
+            assertThat(parsed).containsEntry("_schemaVersion", "1.0"); 
         }
 
         @Test
         @DisplayName("routes FAILED events to error event type")
-        void routesFailedToErrorType() throws Exception { // GH-90000
-            publishAndAwait(client, "t1", Map.of("status", "FAILED", "errorMessage", "broke")); // GH-90000
+        void routesFailedToErrorType() throws Exception { 
+            publishAndAwait(client, "t1", Map.of("status", "FAILED", "errorMessage", "broke")); 
 
             assertThat(eventCloud.getEvents("t1").get(0).eventType())
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); // GH-90000
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); 
         }
 
         @Test
         @DisplayName("routes TIMEOUT events to error event type")
-        void routesTimeoutToErrorType() throws Exception { // GH-90000
-            publishAndAwait(client, "t1", Map.of("status", "TIMEOUT")); // GH-90000
+        void routesTimeoutToErrorType() throws Exception { 
+            publishAndAwait(client, "t1", Map.of("status", "TIMEOUT")); 
 
             assertThat(eventCloud.getEvents("t1").get(0).eventType())
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); // GH-90000
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); 
         }
 
         @Test
         @DisplayName("routes SUCCESS events to step execution type")
-        void routesSuccessToStepType() throws Exception { // GH-90000
-            publishAndAwait(client, "t1", Map.of("status", "SUCCESS")); // GH-90000
+        void routesSuccessToStepType() throws Exception { 
+            publishAndAwait(client, "t1", Map.of("status", "SUCCESS")); 
 
             assertThat(eventCloud.getEvents("t1").get(0).eventType())
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("routes RETRY events to step execution type")
-        void routesRetryToStepType() throws Exception { // GH-90000
-            publishAndAwait(client, "t1", Map.of("status", "RETRY")); // GH-90000
+        void routesRetryToStepType() throws Exception { 
+            publishAndAwait(client, "t1", Map.of("status", "RETRY")); 
 
             assertThat(eventCloud.getEvents("t1").get(0).eventType())
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("routes CANCELLED events to step execution type")
-        void routesCancelledToStepType() throws Exception { // GH-90000
-            publishAndAwait(client, "t1", Map.of("status", "CANCELLED")); // GH-90000
+        void routesCancelledToStepType() throws Exception { 
+            publishAndAwait(client, "t1", Map.of("status", "CANCELLED")); 
 
             assertThat(eventCloud.getEvents("t1").get(0).eventType())
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("routes event without status field to step execution type")
-        void routesNoStatusToStepType() throws Exception { // GH-90000
-            publishAndAwait(client, "t1", Map.of("key", "value")); // GH-90000
+        void routesNoStatusToStepType() throws Exception { 
+            publishAndAwait(client, "t1", Map.of("key", "value")); 
 
             assertThat(eventCloud.getEvents("t1").get(0).eventType())
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("publishes byte[] payload as-is without serialization")
-        void publishesByteArrayAsIs() throws Exception { // GH-90000
-            byte[] rawPayload = "{\"raw\":true}".getBytes(StandardCharsets.UTF_8); // GH-90000
+        void publishesByteArrayAsIs() throws Exception { 
+            byte[] rawPayload = "{\"raw\":true}".getBytes(StandardCharsets.UTF_8); 
 
-            publishAndAwait(client, "t1", rawPayload); // GH-90000
+            publishAndAwait(client, "t1", rawPayload); 
 
             InMemoryEventCloud.StoredEvent stored = eventCloud.getEvents("t1").get(0);
-            assertThat(stored.payload()).isEqualTo(rawPayload); // GH-90000
-            assertThat(stored.eventType()).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+            assertThat(stored.payload()).isEqualTo(rawPayload); 
+            assertThat(stored.eventType()).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("publishes to correct tenant isolation")
-        void respectsTenantIsolation() throws Exception { // GH-90000
-            publishAndAwait(client, "tenant-A", Map.of("data", "a")); // GH-90000
-            publishAndAwait(client, "tenant-B", Map.of("data", "b")); // GH-90000
+        void respectsTenantIsolation() throws Exception { 
+            publishAndAwait(client, "tenant-A", Map.of("data", "a")); 
+            publishAndAwait(client, "tenant-B", Map.of("data", "b")); 
 
             assertThat(eventCloud.getEvents("tenant-A")).hasSize(1);
             assertThat(eventCloud.getEvents("tenant-B")).hasSize(1);
@@ -218,17 +218,17 @@ class DefaultEventLogClientTest extends EventloopTestBase {
 
         @Test
         @DisplayName("rejects null tenantId")
-        void rejectsNullTenantId() { // GH-90000
-            assertThatThrownBy(() -> client.publishEvent(null, Map.of("k", "v"))) // GH-90000
-                    .isInstanceOf(NullPointerException.class) // GH-90000
+        void rejectsNullTenantId() { 
+            assertThatThrownBy(() -> client.publishEvent(null, Map.of("k", "v"))) 
+                    .isInstanceOf(NullPointerException.class) 
                     .hasMessageContaining("tenantId");
         }
 
         @Test
         @DisplayName("rejects null event")
-        void rejectsNullEvent() { // GH-90000
-            assertThatThrownBy(() -> client.publishEvent("t1", null)) // GH-90000
-                    .isInstanceOf(NullPointerException.class) // GH-90000
+        void rejectsNullEvent() { 
+            assertThatThrownBy(() -> client.publishEvent("t1", null)) 
+                    .isInstanceOf(NullPointerException.class) 
                     .hasMessageContaining("event");
         }
     }
@@ -241,83 +241,83 @@ class DefaultEventLogClientTest extends EventloopTestBase {
 
         @Test
         @DisplayName("enriches Map events with metadata fields")
-        void enrichesMapWithMetadata() throws Exception { // GH-90000
-            Map<String, Object> event = new HashMap<>(); // GH-90000
-            event.put("stepId", "s1"); // GH-90000
-            event.put("status", "SUCCESS"); // GH-90000
+        void enrichesMapWithMetadata() throws Exception { 
+            Map<String, Object> event = new HashMap<>(); 
+            event.put("stepId", "s1"); 
+            event.put("status", "SUCCESS"); 
 
-            byte[] bytes = client.serializeEvent(event); // GH-90000
+            byte[] bytes = client.serializeEvent(event); 
             @SuppressWarnings("unchecked")
-            Map<String, Object> parsed = objectMapper.readValue(bytes, Map.class); // GH-90000
+            Map<String, Object> parsed = objectMapper.readValue(bytes, Map.class); 
 
-            assertThat(parsed).containsKeys("_publishedAt", "_schemaVersion", "stepId", "status"); // GH-90000
+            assertThat(parsed).containsKeys("_publishedAt", "_schemaVersion", "stepId", "status"); 
             assertThat(parsed.get("_schemaVersion")).isEqualTo("1.0");
             assertThat(Instant.parse((String) parsed.get("_publishedAt"))).isBeforeOrEqualTo(Instant.now());
         }
 
         @Test
         @DisplayName("preserves all original Map entries in serialization")
-        void preservesAllMapEntries() throws Exception { // GH-90000
-            Map<String, Object> event = new HashMap<>(); // GH-90000
-            event.put("stepId", "s1"); // GH-90000
-            event.put("agentId", "a1"); // GH-90000
-            event.put("status", "SUCCESS"); // GH-90000
-            event.put("durationMs", 100L); // GH-90000
-            event.put("attemptNumber", 2); // GH-90000
-            event.put("totalAttempts", 3); // GH-90000
-            event.put("resultData", Map.of("output", "done")); // GH-90000
+        void preservesAllMapEntries() throws Exception { 
+            Map<String, Object> event = new HashMap<>(); 
+            event.put("stepId", "s1"); 
+            event.put("agentId", "a1"); 
+            event.put("status", "SUCCESS"); 
+            event.put("durationMs", 100L); 
+            event.put("attemptNumber", 2); 
+            event.put("totalAttempts", 3); 
+            event.put("resultData", Map.of("output", "done")); 
 
-            byte[] bytes = client.serializeEvent(event); // GH-90000
+            byte[] bytes = client.serializeEvent(event); 
             @SuppressWarnings("unchecked")
-            Map<String, Object> parsed = objectMapper.readValue(bytes, Map.class); // GH-90000
+            Map<String, Object> parsed = objectMapper.readValue(bytes, Map.class); 
 
-            assertThat(parsed).containsEntry("stepId", "s1"); // GH-90000
-            assertThat(parsed).containsEntry("agentId", "a1"); // GH-90000
-            assertThat(parsed).containsEntry("status", "SUCCESS"); // GH-90000
-            assertThat(parsed).containsEntry("attemptNumber", 2); // GH-90000
-            assertThat(parsed).containsEntry("totalAttempts", 3); // GH-90000
+            assertThat(parsed).containsEntry("stepId", "s1"); 
+            assertThat(parsed).containsEntry("agentId", "a1"); 
+            assertThat(parsed).containsEntry("status", "SUCCESS"); 
+            assertThat(parsed).containsEntry("attemptNumber", 2); 
+            assertThat(parsed).containsEntry("totalAttempts", 3); 
         }
 
         @Test
         @DisplayName("returns byte[] as-is without modification")
-        void byteArrayPassthrough() throws Exception { // GH-90000
-            byte[] original = "raw-bytes".getBytes(StandardCharsets.UTF_8); // GH-90000
-            byte[] result = client.serializeEvent(original); // GH-90000
-            assertThat(result).isSameAs(original); // GH-90000
+        void byteArrayPassthrough() throws Exception { 
+            byte[] original = "raw-bytes".getBytes(StandardCharsets.UTF_8); 
+            byte[] result = client.serializeEvent(original); 
+            assertThat(result).isSameAs(original); 
         }
 
         @Test
         @DisplayName("serializes non-Map objects via Jackson")
-        void serializesArbitraryObjects() throws Exception { // GH-90000
-            record SimpleEvent(String id, int value) {} // GH-90000
-            byte[] bytes = client.serializeEvent(new SimpleEvent("e1", 42)); // GH-90000
+        void serializesArbitraryObjects() throws Exception { 
+            record SimpleEvent(String id, int value) {} 
+            byte[] bytes = client.serializeEvent(new SimpleEvent("e1", 42)); 
             @SuppressWarnings("unchecked")
-            Map<String, Object> parsed = objectMapper.readValue(bytes, Map.class); // GH-90000
-            assertThat(parsed).containsEntry("id", "e1"); // GH-90000
-            assertThat(parsed).containsEntry("value", 42); // GH-90000
+            Map<String, Object> parsed = objectMapper.readValue(bytes, Map.class); 
+            assertThat(parsed).containsEntry("id", "e1"); 
+            assertThat(parsed).containsEntry("value", 42); 
         }
 
         @Test
         @DisplayName("handles empty Map")
-        void emptyMap() throws Exception { // GH-90000
-            byte[] bytes = client.serializeEvent(Map.of()); // GH-90000
+        void emptyMap() throws Exception { 
+            byte[] bytes = client.serializeEvent(Map.of()); 
             @SuppressWarnings("unchecked")
-            Map<String, Object> parsed = objectMapper.readValue(bytes, Map.class); // GH-90000
-            assertThat(parsed).containsKeys("_publishedAt", "_schemaVersion"); // GH-90000
-            assertThat(parsed).hasSize(2); // GH-90000
+            Map<String, Object> parsed = objectMapper.readValue(bytes, Map.class); 
+            assertThat(parsed).containsKeys("_publishedAt", "_schemaVersion"); 
+            assertThat(parsed).hasSize(2); 
         }
 
         @Test
         @DisplayName("handles Map with null values")
-        void mapWithNullValues() throws Exception { // GH-90000
-            Map<String, Object> event = new HashMap<>(); // GH-90000
-            event.put("stepId", "s1"); // GH-90000
-            event.put("errorMessage", null); // GH-90000
+        void mapWithNullValues() throws Exception { 
+            Map<String, Object> event = new HashMap<>(); 
+            event.put("stepId", "s1"); 
+            event.put("errorMessage", null); 
 
-            byte[] bytes = client.serializeEvent(event); // GH-90000
+            byte[] bytes = client.serializeEvent(event); 
             @SuppressWarnings("unchecked")
-            Map<String, Object> parsed = objectMapper.readValue(bytes, Map.class); // GH-90000
-            assertThat(parsed).containsEntry("stepId", "s1"); // GH-90000
+            Map<String, Object> parsed = objectMapper.readValue(bytes, Map.class); 
+            assertThat(parsed).containsEntry("stepId", "s1"); 
             assertThat(parsed).containsKey("errorMessage");
             assertThat(parsed.get("errorMessage")).isNull();
         }
@@ -331,72 +331,72 @@ class DefaultEventLogClientTest extends EventloopTestBase {
 
         @Test
         @DisplayName("FAILED → agent.step.error")
-        void failedMapsToError() { // GH-90000
-            assertThat(client.resolveEventType(Map.of("status", "FAILED"))) // GH-90000
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); // GH-90000
+        void failedMapsToError() { 
+            assertThat(client.resolveEventType(Map.of("status", "FAILED"))) 
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); 
         }
 
         @Test
         @DisplayName("TIMEOUT → agent.step.error")
-        void timeoutMapsToError() { // GH-90000
-            assertThat(client.resolveEventType(Map.of("status", "TIMEOUT"))) // GH-90000
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); // GH-90000
+        void timeoutMapsToError() { 
+            assertThat(client.resolveEventType(Map.of("status", "TIMEOUT"))) 
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); 
         }
 
         @Test
         @DisplayName("SUCCESS → agent.step.execution")
-        void successMapsToStep() { // GH-90000
-            assertThat(client.resolveEventType(Map.of("status", "SUCCESS"))) // GH-90000
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+        void successMapsToStep() { 
+            assertThat(client.resolveEventType(Map.of("status", "SUCCESS"))) 
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("RETRY → agent.step.execution")
-        void retryMapsToStep() { // GH-90000
-            assertThat(client.resolveEventType(Map.of("status", "RETRY"))) // GH-90000
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+        void retryMapsToStep() { 
+            assertThat(client.resolveEventType(Map.of("status", "RETRY"))) 
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("CANCELLED → agent.step.execution")
-        void cancelledMapsToStep() { // GH-90000
-            assertThat(client.resolveEventType(Map.of("status", "CANCELLED"))) // GH-90000
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+        void cancelledMapsToStep() { 
+            assertThat(client.resolveEventType(Map.of("status", "CANCELLED"))) 
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("no status key → agent.step.execution")
-        void noStatusDefaultsToStep() { // GH-90000
-            assertThat(client.resolveEventType(Map.of("key", "value"))) // GH-90000
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+        void noStatusDefaultsToStep() { 
+            assertThat(client.resolveEventType(Map.of("key", "value"))) 
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("null status value → agent.step.execution")
-        void nullStatusDefaultsToStep() { // GH-90000
-            Map<String, Object> event = new HashMap<>(); // GH-90000
-            event.put("status", null); // GH-90000
-            assertThat(client.resolveEventType(event)).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+        void nullStatusDefaultsToStep() { 
+            Map<String, Object> event = new HashMap<>(); 
+            event.put("status", null); 
+            assertThat(client.resolveEventType(event)).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("non-Map event → agent.step.execution")
-        void nonMapDefaultsToStep() { // GH-90000
+        void nonMapDefaultsToStep() { 
             assertThat(client.resolveEventType("string-event")).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP);
         }
 
         @Test
         @DisplayName("byte[] event → agent.step.execution")
-        void byteArrayDefaultsToStep() { // GH-90000
-            assertThat(client.resolveEventType(new byte[] {1, 2, 3})) // GH-90000
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+        void byteArrayDefaultsToStep() { 
+            assertThat(client.resolveEventType(new byte[] {1, 2, 3})) 
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
         }
 
         @Test
         @DisplayName("status as enum object uses toString()")
-        void statusEnumUsesToString() { // GH-90000
-            assertThat(client.resolveEventType(Map.of("status", TestStatus.FAILED))) // GH-90000
-                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); // GH-90000
+        void statusEnumUsesToString() { 
+            assertThat(client.resolveEventType(Map.of("status", TestStatus.FAILED))) 
+                    .isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); 
         }
 
         private enum TestStatus {
@@ -413,54 +413,54 @@ class DefaultEventLogClientTest extends EventloopTestBase {
 
         @Test
         @DisplayName("initial metrics are all zero")
-        void initialMetricsZero() { // GH-90000
-            assertThat(client.getPublishedCount()).isZero(); // GH-90000
-            assertThat(client.getFailedCount()).isZero(); // GH-90000
-            assertThat(client.getAverageLatencyMs()).isEqualTo(0.0); // GH-90000
+        void initialMetricsZero() { 
+            assertThat(client.getPublishedCount()).isZero(); 
+            assertThat(client.getFailedCount()).isZero(); 
+            assertThat(client.getAverageLatencyMs()).isEqualTo(0.0); 
         }
 
         @Test
         @DisplayName("publishedCount increments on success")
-        void publishedCountIncrements() throws Exception { // GH-90000
-            publishAndAwait(client, "t1", Map.of("k", "v")); // GH-90000
-            assertThat(client.getPublishedCount()).isEqualTo(1); // GH-90000
+        void publishedCountIncrements() throws Exception { 
+            publishAndAwait(client, "t1", Map.of("k", "v")); 
+            assertThat(client.getPublishedCount()).isEqualTo(1); 
 
-            publishAndAwait(client, "t1", Map.of("k", "v2")); // GH-90000
-            assertThat(client.getPublishedCount()).isEqualTo(2); // GH-90000
+            publishAndAwait(client, "t1", Map.of("k", "v2")); 
+            assertThat(client.getPublishedCount()).isEqualTo(2); 
         }
 
         @Test
         @DisplayName("failedCount increments on EventCloud failure")
-        void failedCountIncrements() throws Exception { // GH-90000
+        void failedCountIncrements() throws Exception { 
             DefaultEventLogClient failClient =
-                    new DefaultEventLogClient(new FailingEventCloud(), objectMapper, executor); // GH-90000
+                    new DefaultEventLogClient(new FailingEventCloud(), objectMapper, executor); 
 
             try {
-                publishAndAwait(failClient, "t1", Map.of("k", "v")); // GH-90000
-            } catch (Exception ignored) { // GH-90000
+                publishAndAwait(failClient, "t1", Map.of("k", "v")); 
+            } catch (Exception ignored) { 
                 // expected
             }
-            assertThat(failClient.getFailedCount()).isEqualTo(1); // GH-90000
-            assertThat(failClient.getPublishedCount()).isZero(); // GH-90000
+            assertThat(failClient.getFailedCount()).isEqualTo(1); 
+            assertThat(failClient.getPublishedCount()).isZero(); 
         }
 
         @Test
         @DisplayName("averageLatencyMs is positive after successful publishes")
-        void averageLatencyPositive() throws Exception { // GH-90000
-            publishAndAwait(client, "t1", Map.of("a", "b")); // GH-90000
-            assertThat(client.getAverageLatencyMs()).isGreaterThan(0.0); // GH-90000
+        void averageLatencyPositive() throws Exception { 
+            publishAndAwait(client, "t1", Map.of("a", "b")); 
+            assertThat(client.getAverageLatencyMs()).isGreaterThan(0.0); 
         }
 
         @Test
         @DisplayName("resetMetrics clears all counters")
-        void resetMetrics() throws Exception { // GH-90000
-            publishAndAwait(client, "t1", Map.of("k", "v")); // GH-90000
-            assertThat(client.getPublishedCount()).isEqualTo(1); // GH-90000
+        void resetMetrics() throws Exception { 
+            publishAndAwait(client, "t1", Map.of("k", "v")); 
+            assertThat(client.getPublishedCount()).isEqualTo(1); 
 
-            client.resetMetrics(); // GH-90000
-            assertThat(client.getPublishedCount()).isZero(); // GH-90000
-            assertThat(client.getFailedCount()).isZero(); // GH-90000
-            assertThat(client.getAverageLatencyMs()).isEqualTo(0.0); // GH-90000
+            client.resetMetrics(); 
+            assertThat(client.getPublishedCount()).isZero(); 
+            assertThat(client.getFailedCount()).isZero(); 
+            assertThat(client.getAverageLatencyMs()).isEqualTo(0.0); 
         }
     }
 
@@ -472,42 +472,42 @@ class DefaultEventLogClientTest extends EventloopTestBase {
 
         @Test
         @DisplayName("wraps EventCloud exceptions in EventPublishException")
-        void wrapsEventCloudExceptions() { // GH-90000
+        void wrapsEventCloudExceptions() { 
             DefaultEventLogClient failClient =
-                    new DefaultEventLogClient(new FailingEventCloud(), objectMapper, executor); // GH-90000
+                    new DefaultEventLogClient(new FailingEventCloud(), objectMapper, executor); 
 
             try {
-                publishAndAwait(failClient, "t1", Map.of("k", "v")); // GH-90000
+                publishAndAwait(failClient, "t1", Map.of("k", "v")); 
                 assertThat(false).as("Should have thrown").isTrue();
-            } catch (Exception e) { // GH-90000
-                assertThat(e).isInstanceOf(DefaultEventLogClient.EventPublishException.class); // GH-90000
-                assertThat(e.getCause()).isInstanceOf(RuntimeException.class); // GH-90000
+            } catch (Exception e) { 
+                assertThat(e).isInstanceOf(DefaultEventLogClient.EventPublishException.class); 
+                assertThat(e.getCause()).isInstanceOf(RuntimeException.class); 
                 assertThat(e.getMessage()).contains("tenant");
             }
         }
 
         @Test
         @DisplayName("wraps serialization failures in EventPublishException")
-        void wrapsSerializationFailures() { // GH-90000
-            ObjectMapper brokenMapper = new ObjectMapper() { // GH-90000
+        void wrapsSerializationFailures() { 
+            ObjectMapper brokenMapper = new ObjectMapper() { 
                 @Override
-                public byte[] writeValueAsBytes(Object value) throws JsonProcessingException { // GH-90000
-                    throw new com.fasterxml.jackson.core.JsonGenerationException( // GH-90000
-                            "forced failure", (com.fasterxml.jackson.core.JsonGenerator) null); // GH-90000
+                public byte[] writeValueAsBytes(Object value) throws JsonProcessingException { 
+                    throw new com.fasterxml.jackson.core.JsonGenerationException( 
+                            "forced failure", (com.fasterxml.jackson.core.JsonGenerator) null); 
                 }
             };
-            DefaultEventLogClient failClient = new DefaultEventLogClient(eventCloud, brokenMapper, executor); // GH-90000
+            DefaultEventLogClient failClient = new DefaultEventLogClient(eventCloud, brokenMapper, executor); 
 
             try {
-                publishAndAwait(failClient, "t1", new Object() { // GH-90000
+                publishAndAwait(failClient, "t1", new Object() { 
                     @SuppressWarnings("unused")
-                    public String getField() { // GH-90000
+                    public String getField() { 
                         throw new RuntimeException("boom");
                     }
                 });
                 assertThat(false).as("Should have thrown").isTrue();
-            } catch (Exception e) { // GH-90000
-                assertThat(e).isInstanceOf(DefaultEventLogClient.EventPublishException.class); // GH-90000
+            } catch (Exception e) { 
+                assertThat(e).isInstanceOf(DefaultEventLogClient.EventPublishException.class); 
             }
         }
     }
@@ -520,36 +520,36 @@ class DefaultEventLogClientTest extends EventloopTestBase {
 
         @Test
         @DisplayName("concurrent publishes all succeed and metrics are accurate")
-        void concurrentPublishes() throws Exception { // GH-90000
+        void concurrentPublishes() throws Exception { 
             int threadCount = 10;
-            ExecutorService pool = Executors.newFixedThreadPool(threadCount); // GH-90000
-            ExecutorService clientExecutor = Executors.newVirtualThreadPerTaskExecutor(); // GH-90000
-            DefaultEventLogClient concurrentClient = new DefaultEventLogClient(eventCloud, objectMapper, clientExecutor); // GH-90000
+            ExecutorService pool = Executors.newFixedThreadPool(threadCount); 
+            ExecutorService clientExecutor = Executors.newVirtualThreadPerTaskExecutor(); 
+            DefaultEventLogClient concurrentClient = new DefaultEventLogClient(eventCloud, objectMapper, clientExecutor); 
 
-            CountDownLatch latch = new CountDownLatch(threadCount); // GH-90000
-            AtomicInteger failures = new AtomicInteger(); // GH-90000
+            CountDownLatch latch = new CountDownLatch(threadCount); 
+            AtomicInteger failures = new AtomicInteger(); 
 
-            for (int i = 0; i < threadCount; i++) { // GH-90000
+            for (int i = 0; i < threadCount; i++) { 
                 final int idx = i;
-                pool.submit(() -> { // GH-90000
+                pool.submit(() -> { 
                     try {
-                        publishAndAwait( // GH-90000
-                                concurrentClient, "concurrent-tenant", Map.of("thread", idx, "status", "SUCCESS")); // GH-90000
-                    } catch (Exception e) { // GH-90000
-                        failures.incrementAndGet(); // GH-90000
+                        publishAndAwait( 
+                                concurrentClient, "concurrent-tenant", Map.of("thread", idx, "status", "SUCCESS")); 
+                    } catch (Exception e) { 
+                        failures.incrementAndGet(); 
                     } finally {
-                        latch.countDown(); // GH-90000
+                        latch.countDown(); 
                     }
                 });
             }
 
-            latch.await(10, TimeUnit.SECONDS); // GH-90000
-            assertThat(failures.get()).isZero(); // GH-90000
-            assertThat(concurrentClient.getPublishedCount()).isEqualTo(threadCount); // GH-90000
+            latch.await(10, TimeUnit.SECONDS); 
+            assertThat(failures.get()).isZero(); 
+            assertThat(concurrentClient.getPublishedCount()).isEqualTo(threadCount); 
             assertThat(eventCloud.getEvents("concurrent-tenant")).hasSize(threadCount);
 
-            pool.shutdown(); // GH-90000
-            clientExecutor.shutdown(); // GH-90000
+            pool.shutdown(); 
+            clientExecutor.shutdown(); 
         }
     }
 
@@ -561,44 +561,44 @@ class DefaultEventLogClientTest extends EventloopTestBase {
 
         @Test
         @DisplayName("published event can be deserialized back with all fields intact")
-        void roundTrip() throws Exception { // GH-90000
-            Instant now = Instant.now(); // GH-90000
-            Map<String, Object> original = new HashMap<>(); // GH-90000
-            original.put("stepId", "step-42"); // GH-90000
-            original.put("agentId", "agent-7"); // GH-90000
-            original.put("status", "SUCCESS"); // GH-90000
-            original.put("attemptNumber", 1); // GH-90000
-            original.put("totalAttempts", 3); // GH-90000
-            original.put("durationMs", 250L); // GH-90000
-            original.put("eventType", "agent.step.result"); // GH-90000
-            original.put("timestamp", now.toEpochMilli()); // GH-90000
+        void roundTrip() throws Exception { 
+            Instant now = Instant.now(); 
+            Map<String, Object> original = new HashMap<>(); 
+            original.put("stepId", "step-42"); 
+            original.put("agentId", "agent-7"); 
+            original.put("status", "SUCCESS"); 
+            original.put("attemptNumber", 1); 
+            original.put("totalAttempts", 3); 
+            original.put("durationMs", 250L); 
+            original.put("eventType", "agent.step.result"); 
+            original.put("timestamp", now.toEpochMilli()); 
 
-            publishAndAwait(client, "tenant-rt", original); // GH-90000
+            publishAndAwait(client, "tenant-rt", original); 
 
             byte[] storedBytes = eventCloud.getEvents("tenant-rt").get(0).payload();
             @SuppressWarnings("unchecked")
-            Map<String, Object> deserialized = objectMapper.readValue(storedBytes, Map.class); // GH-90000
+            Map<String, Object> deserialized = objectMapper.readValue(storedBytes, Map.class); 
 
-            assertThat(deserialized).containsEntry("stepId", "step-42"); // GH-90000
-            assertThat(deserialized).containsEntry("agentId", "agent-7"); // GH-90000
-            assertThat(deserialized).containsEntry("status", "SUCCESS"); // GH-90000
-            assertThat(deserialized).containsEntry("attemptNumber", 1); // GH-90000
-            assertThat(deserialized).containsEntry("totalAttempts", 3); // GH-90000
-            assertThat(deserialized).containsEntry("eventType", "agent.step.result"); // GH-90000
+            assertThat(deserialized).containsEntry("stepId", "step-42"); 
+            assertThat(deserialized).containsEntry("agentId", "agent-7"); 
+            assertThat(deserialized).containsEntry("status", "SUCCESS"); 
+            assertThat(deserialized).containsEntry("attemptNumber", 1); 
+            assertThat(deserialized).containsEntry("totalAttempts", 3); 
+            assertThat(deserialized).containsEntry("eventType", "agent.step.result"); 
             assertThat(deserialized).containsKey("_publishedAt");
-            assertThat(deserialized).containsEntry("_schemaVersion", "1.0"); // GH-90000
+            assertThat(deserialized).containsEntry("_schemaVersion", "1.0"); 
         }
 
         @Test
         @DisplayName("byte[] round-trip preserves exact bytes")
-        void byteArrayRoundTrip() throws Exception { // GH-90000
+        void byteArrayRoundTrip() throws Exception { 
             String jsonStr = "{\"custom\":\"payload\",\"value\":123}";
-            byte[] rawBytes = jsonStr.getBytes(StandardCharsets.UTF_8); // GH-90000
+            byte[] rawBytes = jsonStr.getBytes(StandardCharsets.UTF_8); 
 
-            publishAndAwait(client, "tenant-bytes", rawBytes); // GH-90000
+            publishAndAwait(client, "tenant-bytes", rawBytes); 
 
             byte[] storedBytes = eventCloud.getEvents("tenant-bytes").get(0).payload();
-            assertThat(new String(storedBytes, StandardCharsets.UTF_8)).isEqualTo(jsonStr); // GH-90000
+            assertThat(new String(storedBytes, StandardCharsets.UTF_8)).isEqualTo(jsonStr); 
         }
     }
 
@@ -610,51 +610,51 @@ class DefaultEventLogClientTest extends EventloopTestBase {
 
         @Test
         @DisplayName("handles event in the format produced by AgentEventEmitter.buildAgentEvent()")
-        void handlesAgentEventEmitterFormat() throws Exception { // GH-90000
-            Map<String, Object> agentEvent = new HashMap<>(); // GH-90000
-            agentEvent.put("stepId", "step-abc"); // GH-90000
-            agentEvent.put("agentId", "agent-xyz"); // GH-90000
-            agentEvent.put("status", "SUCCESS"); // GH-90000
-            agentEvent.put("attemptNumber", 1); // GH-90000
-            agentEvent.put("totalAttempts", 1); // GH-90000
-            agentEvent.put("eventId", "agent-step-agent-xyz-step-abc-1-1234567890"); // GH-90000
-            agentEvent.put("eventType", "agent.step.result"); // GH-90000
-            agentEvent.put("timestamp", Instant.now().toEpochMilli()); // GH-90000
-            agentEvent.put("durationMs", 100L); // GH-90000
-            agentEvent.put("resultData", Map.of("output", "computed-value")); // GH-90000
-            agentEvent.put("errorMessage", null); // GH-90000
+        void handlesAgentEventEmitterFormat() throws Exception { 
+            Map<String, Object> agentEvent = new HashMap<>(); 
+            agentEvent.put("stepId", "step-abc"); 
+            agentEvent.put("agentId", "agent-xyz"); 
+            agentEvent.put("status", "SUCCESS"); 
+            agentEvent.put("attemptNumber", 1); 
+            agentEvent.put("totalAttempts", 1); 
+            agentEvent.put("eventId", "agent-step-agent-xyz-step-abc-1-1234567890"); 
+            agentEvent.put("eventType", "agent.step.result"); 
+            agentEvent.put("timestamp", Instant.now().toEpochMilli()); 
+            agentEvent.put("durationMs", 100L); 
+            agentEvent.put("resultData", Map.of("output", "computed-value")); 
+            agentEvent.put("errorMessage", null); 
 
-            publishAndAwait(client, "production-tenant", agentEvent); // GH-90000
+            publishAndAwait(client, "production-tenant", agentEvent); 
 
             List<InMemoryEventCloud.StoredEvent> events = eventCloud.getEvents("production-tenant");
-            assertThat(events).hasSize(1); // GH-90000
+            assertThat(events).hasSize(1); 
 
-            InMemoryEventCloud.StoredEvent stored = events.get(0); // GH-90000
-            assertThat(stored.eventType()).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); // GH-90000
+            InMemoryEventCloud.StoredEvent stored = events.get(0); 
+            assertThat(stored.eventType()).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_STEP); 
 
             @SuppressWarnings("unchecked")
-            Map<String, Object> parsed = objectMapper.readValue(stored.payload(), Map.class); // GH-90000
-            assertThat(parsed).containsEntry("stepId", "step-abc"); // GH-90000
-            assertThat(parsed).containsEntry("agentId", "agent-xyz"); // GH-90000
-            assertThat(parsed).containsEntry("eventType", "agent.step.result"); // GH-90000
+            Map<String, Object> parsed = objectMapper.readValue(stored.payload(), Map.class); 
+            assertThat(parsed).containsEntry("stepId", "step-abc"); 
+            assertThat(parsed).containsEntry("agentId", "agent-xyz"); 
+            assertThat(parsed).containsEntry("eventType", "agent.step.result"); 
             assertThat(parsed.get("resultData")).isInstanceOf(Map.class);
         }
 
         @Test
         @DisplayName("handles failed event from AgentEventEmitter format")
-        void handlesFailedAgentEvent() throws Exception { // GH-90000
-            Map<String, Object> failedEvent = new HashMap<>(); // GH-90000
-            failedEvent.put("stepId", "step-fail"); // GH-90000
-            failedEvent.put("agentId", "agent-crash"); // GH-90000
-            failedEvent.put("status", "FAILED"); // GH-90000
-            failedEvent.put("errorMessage", "OutOfMemoryError"); // GH-90000
-            failedEvent.put("durationMs", 5000L); // GH-90000
+        void handlesFailedAgentEvent() throws Exception { 
+            Map<String, Object> failedEvent = new HashMap<>(); 
+            failedEvent.put("stepId", "step-fail"); 
+            failedEvent.put("agentId", "agent-crash"); 
+            failedEvent.put("status", "FAILED"); 
+            failedEvent.put("errorMessage", "OutOfMemoryError"); 
+            failedEvent.put("durationMs", 5000L); 
 
-            publishAndAwait(client, "tenant-err", failedEvent); // GH-90000
+            publishAndAwait(client, "tenant-err", failedEvent); 
 
             InMemoryEventCloud.StoredEvent stored =
                     eventCloud.getEvents("tenant-err").get(0);
-            assertThat(stored.eventType()).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); // GH-90000
+            assertThat(stored.eventType()).isEqualTo(DefaultEventLogClient.EVENT_TYPE_AGENT_ERROR); 
         }
     }
 
@@ -664,14 +664,14 @@ class DefaultEventLogClientTest extends EventloopTestBase {
      * Publish an event via the given client using the managed Eventloop from
      * {@link EventloopTestBase}. Propagates any exception thrown by the Promise.
      */
-    private void publishAndAwait(DefaultEventLogClient clientToUse, String tenantId, Object event) throws Exception { // GH-90000
+    private void publishAndAwait(DefaultEventLogClient clientToUse, String tenantId, Object event) throws Exception { 
         try {
-            runPromise(() -> clientToUse.publishEvent(tenantId, event)); // GH-90000
-        } catch (DefaultEventLogClient.EventPublishException e) { // GH-90000
+            runPromise(() -> clientToUse.publishEvent(tenantId, event)); 
+        } catch (DefaultEventLogClient.EventPublishException e) { 
             throw e; // already the right type — don't unwrap
-        } catch (RuntimeException e) { // GH-90000
+        } catch (RuntimeException e) { 
             // Unwrap checked exceptions rethrown as RuntimeException by runPromise
-            if (e.getCause() instanceof Exception checked) { // GH-90000
+            if (e.getCause() instanceof Exception checked) { 
                 throw checked;
             }
             throw e;
@@ -681,13 +681,13 @@ class DefaultEventLogClientTest extends EventloopTestBase {
     /** EventCloud that always throws on append — for error-path testing. */
     private static class FailingEventCloud implements EventCloud {
         @Override
-        public String append(String tenantId, String eventType, byte[] payload) { // GH-90000
+        public String append(String tenantId, String eventType, byte[] payload) { 
             throw new RuntimeException("Simulated EventCloud failure");
         }
 
         @Override
-        public Subscription subscribe(String tenantId, String eventType, EventHandler handler) { // GH-90000
-            throw new UnsupportedOperationException(); // GH-90000
+        public Subscription subscribe(String tenantId, String eventType, EventHandler handler) { 
+            throw new UnsupportedOperationException(); 
         }
     }
 }
